# cmakeInterop

./: CMakeLists.txt  README.md
net/: API.cs  Account.cs  Async.cs  AuthParameters.cs  AuthResult.cs  CMakeLists.txt  Core.cs  Error.cs  Handle.cs  Microsoft.Identity.Client.NativeInterop.csproj  Microsoft.Identity.Client.NativeInterop.sln  Module.cs  MsalRuntimeException.cs  Platform.cs  PropertyCollection.cs  PropertyROCollection.cs  ResponseStatus.cs  SignOutResult.cs  readme.md
